update index dev

--- a/index-dev.html
+++ b/index-dev.html
@@ -192,7 +192,7 @@
 						<li><a href="#mission">Mission</a></li>
 						<li><a href="#upcoming">Coming Soon</a></li>
 						<li><a href="#syllabi">Call for Syllabi</a></li>
-						<li><a href="#images-details">Site Image Details</a></li>
+						<li><a href="#image-details">Site Image Details</a></li>
 						<li><a href="#site-code">Site Code & Accessibility</a></li>
 					</ol>
 				</aside>
@@ -231,22 +231,39 @@
 
 					<h2 id="coming-soon">Coming Soon (late January / early February)</h2>
 
-					<p>A carefully-curated array of teaching materials that center voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
+					<p>A carefully-curated array of teaching materials that centers voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
 
 					<ul>
-						<li>Resources and corresponding study materials (primary and secondary) on:
-							<ul>
-								<li>Teaching Mary Seacole's <em>Wonderful Adventures of Mrs Seacole in Many Lands</em> in a variety of thematic and historical contexts, including pathways focused on 
+						<li><span class="smallcaps">Suggested primary resources and study materials</span>
+							<ul class="small">
+								<li>For teaching <strong>Mary Seacole's <em>Wonderful Adventures of Mrs Seacole in Many Lands</em></strong> in a variety of thematic and historical contexts, including pathways focused on: 
 									<ol>
-										<li>Seacole and Identity Politics: Gender, Race, Nation</li>
-										<li>Decentering Britishness</li>
-										<li>Decolonizing (Health)Care</li>
+										<li>Gender, Race, Nation;</li>
+										<li>Decentering Britishness;</li>
+										<li>Decolonizing (Health)Care;</li>
+										<li>[topic TBD];</li>
 									</ol>
 								</li>
-								<li>Strategies for incorporating texts and materials from nineteenth-century Africa based on a variety of critical viewpoints, such as ...</li>
+								<li>For incorporating texts from and about <strong>nineteenth-century Africa</strong> through a variety of thematic and critical contexts, including units on: 
+									<ol>
+										<li>Life writing;</li>
+										<li>Colonial environments;</li>
+										<li>Sex and sexuality;</li>
+										<li>Ethiopianism;</li>
+										<li>Resistance;</li>
+										<li>Poetic representation and reinvention;</li>
+										<li>Afterlives of slavery.</li>
+									</ol>
+								</li>
 							</ul>
 						</li>
-						<li>Video podcast episodes on using visual materials, periodicals and book history to “undiscipline” Victorian literature in classroom settings</li>
+						<br/>
+						<li><span class="smallcaps">Video podcast episodes</span>
+							<ul>
+								<li>On using visual materials, periodicals and book history to “undiscipline” Victorian literature in classroom settings;</li>
+								<li>On incorporating new antiracist frameworks—theoretical, textual, generic, historical, multiracial – in the classroom.</li>
+							</ul>
+						</li>
 					</ul>
 				</section>
 
