--- a/index-dev.html
+++ b/index-dev.html
@@ -36,8 +36,6 @@
 		</script>  	
 	</head>
 
-	<?php flush(); ?>
-
 	<body class="essay">
 		<article>
 		<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
@@ -184,26 +182,21 @@
 				</section>
 				<!-- <div class="col-sm-1"></div> -->
 				<h1 class="header-title">Undisciplining the Victorian Classroom</h1>
-
 				<aside class="announcement" aria-labelledby="site-sections">
 					<!-- <h2 id="site-sections">Site Sections</h2> -->
 					<ol id="site-sections">
 						<li><a href="#organizers">Organizers</a></li>
 						<li><a href="#mission">Mission</a></li>
 						<li><a href="#upcoming">Coming Soon</a></li>
-						<li><a href="#syllabi">Call for Syllabi</a></li>
+						<li><a href="#call">Call for Syllabi</a></li>
 						<li><a href="#image-details">Site Image Details</a></li>
 						<li><a href="#site-code">Site Code & Accessibility</a></li>
 					</ol>
 				</aside>
-
 				<hr/>
 			</header>
 			
 			<main class="main" id="main">
-				
-				<!-- <hr class="section-divider"/> -->
-
 				<section class="organizers" aria-labelledby="organizers">
 					<h2 id="organizers">Organizers</h2>
 					<p><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)<br/>
@@ -227,7 +220,7 @@
 
 				<section aria-labelledby="coming-soon" id="upcoming">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img class="image" src="images/uvc_0005-deriv-1824px.jpg" srcset="images/uvc_0005-deriv-1824px.jpg 1824w, images/uvc_0005-deriv-1384px.jpg 1384w, images/uvc_0005-deriv-1184px.jpg 1184w, images/uvc_0005-deriv-912px.jpg 912w, images/uvc_0005-deriv-692px.jpg 692w, images/uvc_0005-deriv-592px.jpg 592w, images/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 691px, (min-width: 340px) 91.41vw, calc(410vw - 1016px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
+					<img loading="lazy" src="images/uvc_0005-deriv-1824px.jpg" srcset="images/uvc_0005-deriv-1824px.jpg 1824w, images/uvc_0005-deriv-1384px.jpg 1384w, images/uvc_0005-deriv-1184px.jpg 1184w, images/uvc_0005-deriv-912px.jpg 912w, images/uvc_0005-deriv-692px.jpg 692w, images/uvc_0005-deriv-592px.jpg 592w, images/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 691px, (min-width: 340px) 91.41vw, calc(410vw - 1016px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
 
 					<h2 id="coming-soon">Coming Soon (late January / early February)</h2>
 
@@ -269,7 +262,8 @@
 
 				<hr class="section-divider"/>
 				
-				<section aria-labelledby="syllabi">
+				<section aria-labelledby="syllabi" id="call">
+					<img loading="lazy" src="images/uvc_0006-deriv-1384px.jpg" srcset="images/uvc_0006-deriv-1384px.jpg 1384w, images/uvc_0006-deriv-1184px.jpg 1184w, images/uvc_0006-deriv-912px.jpg 912w, images/uvc_0006-deriv-692px.jpg 692w, images/uvc_0006-deriv-592px.jpg 592w, images/uvc_0006-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 691px, (min-width: 340px) 91.41vw, calc(410vw - 1016px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous, “Dance Blanket with Diving Whale and Raven Motifs” (Wool and bark, Northwest Coast of Alaska, United States, c. -c.1900 1880), 1961.568., Art Institute of Chicago, Chicago, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/).">
 					<h2 id="syllabi">Call for Syllabi (CFS)</h2>
 					<p style="padding-top:.5em; text-align: center;"><strong>Deadline:</strong> Accepted on a rolling basis</p>
 					<p><a href="https://undiscipliningvc.org/">Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging  Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds and 2) introduce less-studied, global, Victorian-era authors into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
@@ -289,7 +283,7 @@
 					<h3 id="image-details">Site Image Details</h3>
 
 						<h4>Slideshow</h4>
-						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art, Cleveland. CC0 “No Rights Reserved.”</p>
+						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art. CC0 “No Rights Reserved.”</p>
 
 						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “Earl’s Court Station.” In <a href="https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up">A Japanese Artist in London</a>, by Yoshio Markino, 196. London: Chatto & Windus, 1910. Public domain image.</p>
 
@@ -298,15 +292,17 @@
 						<p id="fante"><em>Slide #4</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>.” Cloth, dye. Ghana, c.1910. Textile and Fiber Arts, 88-9-1. Smithsonian Institution. National Museum of African Art. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
 
 						<h4>Coming Soon</h4>
-						<p>Gee, William. “<a href="https://collections.tepapa.govt.nz/object/417717">Carving Scene</a>.” Tableaux (tōtara wood). Wellington, New Zealand, c.1905. Te Papa (GH007416). Museum of New Zealand | Te Papa Tongarewa. Gift of Mrs G. M. Williams, 1965. <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.</p>
+						<p>Gee, William. “<a href="https://collections.tepapa.govt.nz/object/417717">Carving Scene</a>.” Tōtara wood. Wellington, New Zealand, c.1905. Te Papa (GH007416). Museum of New Zealand | Te Papa Tongarewa. Gift of Mrs G. M. Williams, 1965. <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.</p>
 
+						<h4>Call for Syllabi</h4>
+						<p>Anonymous. “<a href="https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs">Dance Blanket with Diving Whale and Raven Motifs</a>.” Wool and bark. Northwest Coast of Alaska, United States, c.1880-c.1900. 1961.568. Art Institute of Chicago. Kate S. Buckingham Endowment. <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a>.</p>
 				</section>
 			
-				<br/>
+				<hr class="section-divider"/>
 
 				<section aria-labelledby="site-code" class="smaller">
 					<h3 id="site-code">Site Code & Accessibility</h3>
-					<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities.</p>
+					<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities. The site’s minimalist aesthetic cuts down on visual clutter and supports a stress-free and navigationally-clear experience for all audiences.</p>
 				</section>
 
 			</main>
