--- a/index-dev.html
+++ b/index-dev.html
@@ -254,7 +254,7 @@
 						<li><span class="smallcaps">Video podcast episodes</span>
 							<ul>
 								<li>On using visual materials, periodicals and book history to “undiscipline” Victorian literature in classroom settings;</li>
-								<li>On incorporating new antiracist frameworks—theoretical, textual, generic, historical, multiracial – in the classroom.</li>
+								<li>On incorporating new antiracist frameworks – theoretical, textual, generic, historical, multiracial – in the classroom.</li>
 							</ul>
 						</li>
 					</ul>
