--- a/index-dev.html
+++ b/index-dev.html
@@ -182,20 +182,22 @@
 				</section>
 				<!-- <div class="col-sm-1"></div> -->
 				<h1 class="header-title">Undisciplining the Victorian Classroom</h1>
-				<aside class="announcement" aria-labelledby="site-sections">
-					<!-- <h2 id="site-sections">Site Sections</h2> -->
-					<ol id="site-sections">
-						<li><a href="#organizers">Organizers</a></li>
-						<li><a href="#mission">Mission</a></li>
-						<li><a href="#upcoming">Coming Soon</a></li>
-						<li><a href="#call">Call for Syllabi</a></li>
-						<li><a href="#image-details">Site Image Details</a></li>
-						<li><a href="#site-code">Site Code & Accessibility</a></li>
-					</ol>
-				</aside>
-				<hr/>
 			</header>
+
+			<nav class="main-menu" aria-labelledby="site-sections">
+				<!-- <h2 id="site-sections">Site Sections</h2> -->
+				<ol id="site-sections">
+					<li><a href="#organizers">Organizers</a></li>
+					<li><a href="#mission">Mission</a></li>
+					<li><a href="#upcoming">Coming Soon</a></li>
+					<li><a href="#call">Call for Syllabi</a></li>
+					<li><a href="#image-details">Site Image Details</a></li>
+					<li><a href="#site-code">Site Code & Accessibility</a></li>
+				</ol>
+			</nav>
 			
+			<hr class="section-divider"/>
+
 			<main class="main" id="main">
 				<section class="organizers" aria-labelledby="organizers">
 					<h2 id="organizers">Organizers</h2>
