--- a/index-dev.html
+++ b/index-dev.html
@@ -191,8 +191,8 @@
 					<li><a href="#mission">Mission</a></li>
 					<li><a href="#upcoming">Coming Soon</a></li>
 					<li><a href="#call">Call for Syllabi</a></li>
-					<li><a href="#image-details">Site Image Details</a></li>
-					<li><a href="#site-code">Site Code & Accessibility</a></li>
+					<li><a href="#image-details">Image Details</a></li>
+					<li><a href="#site-code">Site Code</a></li>
 				</ol>
 			</nav>
 			
@@ -242,10 +242,10 @@
 							<ul class="small">
 								<li>For teaching <strong>Mary Seacole's <em>Wonderful Adventures of Mrs Seacole in Many Lands</em></strong> in a variety of thematic and historical contexts, including pathways focused on: 
 									<ol>
-										<li>Gender, Race, Nation;</li>
 										<li>Decentering Britishness;</li>
 										<li>Decolonizing (Health)Care;</li>
-										<li>[topic TBD];</li>
+										<li>Gender, Race, Nation;</li>
+										<li>Recentering Nursing in Wartime Contexts;</li>
 									</ol>
 								</li>
 								<li>For incorporating texts from and about <strong>nineteenth-century Africa</strong> through a variety of thematic and critical contexts, including units on: 
@@ -286,13 +286,13 @@
 
 					<h2 id="syllabi">Call for Syllabi (CFS)</h2>
 					<p style="padding-top:.5em; text-align: center;"><strong>Deadline:</strong> Accepted on a rolling basis</p>
-					<p><a href="https://undiscipliningvc.org/">Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging  Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds and 2) introduce less-studied, global, Victorian-era authors into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
+					<p><a href="https://undiscipliningvc.org/">Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging  Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds and 2) introduce less-studied, global, Victorian-era writers, artists and communities into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
 
 					<p>Currently, we are in the process of building content that models antiracist teaching practices for Victorian studies and are seeking syllabi from instructors whose work in the classroom aligns with the mission of <em>Undisciplining the Victorian Classroom.</em> This content will be published on our website after a peer review process, to become part of our open-access resource. While these courses should feature a text or texts from the Victorian era, the syllabi do not need to be exclusively focused on 19th-century literature. Such syllabi can be original syllabi from courses already taught, revised versions of previously used syllabi, or syllabi that have been designed but not yet deployed in a course setting.</p>
 
 					<p>For this Call for Syllabi (CFS), we request short abstracts (300 words maximum) that summarize syllabus content, provide a critical reflection on course design, and cite a small, representative selection of primary and/or secondary course materials. Abstracts will be reviewed by the organizers of <em>Undisciplining the Victorian Classroom</em>, and select instructors will be invited to submit full syllabi along with short, correlated summaries of pedagogical critical intervention. Full syllabi and summaries will undergo full peer review and, if successful, be published on our website.</p>
 					
-					<p>Submissions are accepted on a rolling basis. Syllabi abstracts can be submitted directly through this <a href="https://forms.gle/nTUMTr7E5hH5G3ZV6">Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars, contingent faculty, and those with backgrounds that are under-represented in Victorian Studies.</p>
+					<p>Submissions are accepted on a rolling basis. Syllabi abstracts can be submitted directly through this <a href="https://forms.gle/nTUMTr7E5hH5G3ZV6">Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we especially welcome submissions from early-career scholars, contingent faculty, and those with backgrounds that are under-represented in Victorian Studies.</p>
 					
 					<p>Questions about this CFS and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to  <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a>. To be placed on the project mailing list, kindly fill out this <a href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google mailing list form</a>.</p>
 				</section>
@@ -300,7 +300,7 @@
 				<hr class="section-divider"/>
 			
 				<section aria-labelledby="image-details" class="smaller details">
-					<h3 id="image-details">Site Image Details</h3>
+					<h3 id="image-details">Image Details</h3>
 
 						<h4>Slideshow</h4>
 						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art. CC0 “No Rights Reserved.”</p>
@@ -321,7 +321,7 @@
 				<hr class="section-divider"/>
 
 				<section aria-labelledby="site-code" class="smaller">
-					<h3 id="site-code">Site Code & Accessibility</h3>
+					<h3 id="site-code">Site Code</h3>
 					<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities. The site’s minimalist aesthetic cuts down on visual clutter and supports a stress-free and navigationally-clear experience for all audiences.</p>
 				</section>
 
