update index dev

--- a/index-dev.html
+++ b/index-dev.html
@@ -235,7 +235,7 @@
 
 					<h2 id="coming-soon">Coming Soon (late January / early February)</h2>
 
-					<p>A carefully-curated array of teaching materials that centers voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
+					<p>Carefully-curated teaching materials that center voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
 
 					<ul>
 						<li><span class="smallcaps">Suggested primary resources and study materials</span>
@@ -245,7 +245,7 @@
 										<li>Decentering Britishness;</li>
 										<li>Decolonizing (Health)Care;</li>
 										<li>Gender, Race, Nation;</li>
-										<li>Recentering Nursing in Wartime Contexts;</li>
+										<li>Recentering Nursing in Wartime;</li>
 									</ol>
 								</li>
 								<li>For incorporating texts from and about <strong>nineteenth-century Africa</strong> through a variety of thematic and critical contexts, including units on: 
