--- a/index-dev.html
+++ b/index-dev.html
@@ -210,7 +210,7 @@
 				<section aria-labelledby="mission">
 					<h2 id="mission">Mission Statement</h2>
 					<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging scholarship from Black and African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies. The project seeks to:</p>
-					<ol>
+					<ol class="mission">
 						<li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds, and</li>
 						<li>introduce less-studied, global, Victorian-era writers, artists, and communities into the classroom.</li>
 					</ol>
@@ -238,14 +238,14 @@
 					<p>Carefully-curated teaching materials that center voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
 
 					<ul>
-						<li><span class="smallcaps">Suggested primary resources and study materials</span>
-							<ul class="small">
+						<li><span class="">Suggested primary resources and study materials</span>
+							<ul>
 								<li>For teaching <strong>Mary Seacole's <em>Wonderful Adventures of Mrs Seacole in Many Lands</em></strong> in a variety of thematic and historical contexts, including pathways focused on: 
 									<ol>
 										<li>Decentering Britishness;</li>
 										<li>Decolonizing (Health)Care;</li>
 										<li>Gender, Race, Nation;</li>
-										<li>Recentering Nursing in Wartime;</li>
+										<li>Recentering Nursing in Wartime.</li>
 									</ol>
 								</li>
 								<li>For incorporating texts from and about <strong>nineteenth-century Africa</strong> through a variety of thematic and critical contexts, including units on: 
@@ -261,7 +261,7 @@
 								</li>
 							</ul>
 						</li>
-						<li><span class="smallcaps">Video podcast episodes</span>
+						<li><span class="">Video podcast episodes</span>
 							<ul>
 								<li>On using visual materials, periodicals and book history to “undiscipline” Victorian literature in classroom settings;</li>
 								<li>On incorporating new antiracist frameworks – theoretical, textual, generic, historical, multiracial – in the classroom.</li>
