update index dev

--- a/index-dev.html
+++ b/index-dev.html
@@ -238,9 +238,9 @@
 					<p>Carefully-curated teaching materials that center voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
 
 					<ul>
-						<li><span class="">Suggested primary resources and study materials</span>
+						<li><span>Suggested primary resources and study materials</span>
 							<ul>
-								<li>For teaching <strong>Mary Seacole's <em>Wonderful Adventures of Mrs Seacole in Many Lands</em></strong> in a variety of thematic and historical contexts, including pathways focused on: 
+								<li>For teaching Mary Seacole's <em>Wonderful Adventures of Mrs Seacole in Many Lands</em> in a variety of thematic and historical contexts, including pathways focused on: 
 									<ol>
 										<li>Decentering Britishness;</li>
 										<li>Decolonizing (Health)Care;</li>
@@ -261,7 +261,7 @@
 								</li>
 							</ul>
 						</li>
-						<li><span class="">Video podcast episodes</span>
+						<li><span>Video podcast episodes</span>
 							<ul>
 								<li>On using visual materials, periodicals and book history to “undiscipline” Victorian literature in classroom settings;</li>
 								<li>On incorporating new antiracist frameworks – theoretical, textual, generic, historical, multiracial – in the classroom.</li>
