update index dev

--- a/index-dev.html
+++ b/index-dev.html
@@ -248,7 +248,7 @@
 										<li>Recentering Nursing in Wartime.</li>
 									</ol>
 								</li>
-								<li>For incorporating texts from and about <strong>nineteenth-century Africa</strong> through a variety of thematic and critical contexts, including units on: 
+								<li>For incorporating texts from and about nineteenth-century Africa through a variety of thematic and critical contexts, including units on: 
 									<ol>
 										<li>Life writing;</li>
 										<li>Colonial environments;</li>
