update index dev

--- a/index-dev.html
+++ b/index-dev.html
@@ -198,7 +198,7 @@
 			
 			<hr class="section-divider"/>
 
-			<button onclick="topFunction()" id="topButton" title="Go to top">Top</button>
+			<button onclick="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top">Top</button>
 
 			<main class="main" id="main">
 				<section class="organizers" aria-labelledby="organizers">
