--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-31768072-6")</script>
 </head>
-<?php flush(); ?>
 <body class=essay>
 <article>
 <nav id=skiptocontent aria-labelledby=nav0>
@@ -113,12 +112,20 @@ Anonymous Fante Artist, Asafo Flag, 1910
 </div>
 </section>
 <h1 class=header-title>Undisciplining the Victorian Classroom</h1>
-<hr>
 </header>
+<nav class=main-menu aria-labelledby=site-sections>
+<ol id=site-sections>
+<li><a href=#organizers>Organizers</a></li>
+<li><a href=#mission>Mission</a></li>
+<li><a href=#upcoming>Coming Soon</a></li>
+<li><a href=#call>Call for Syllabi</a></li>
+<li><a href=#image-details>Image Details</a></li>
+<li><a href=#site-code>Site Code</a></li>
+</ol>
+</nav>
+<hr class=section-divider>
+<button onclick=topFunction() ontouchend=topFunction() id=topButton aria-label="Scroll to top" title="Scroll to top">Top</button>
 <main class=main id=main>
-<aside class=announcement aria-labelledby=announcement>
-<p class="center italic" id=announcement>Read our <a href=#syllabi>Call for Syllabi</a> (accepted on a rolling basis)</p>
-</aside>
 <section class=organizers aria-labelledby=organizers>
 <h2 id=organizers>Organizers</h2>
 <p><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)<br>
@@ -129,35 +136,96 @@ Anonymous Fante Artist, Asafo Flag, 1910
 <section aria-labelledby=mission>
 <h2 id=mission>Mission Statement</h2>
 <p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging scholarship from Black and African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies. The project seeks to:</p>
-<ol>
+<ol class=mission>
 <li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds, and</li>
 <li>introduce less-studied, global, Victorian-era writers, artists, and communities into the classroom.</li>
 </ol>
-<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href=https://lareviewofbooks.org/article/undisciplining-victorian-studies/ >Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). This commitment not only informs our content but shapes how we relate to one another in our processes of creation and collaboration.</p> 
+<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href=https://lareviewofbooks.org/article/undisciplining-victorian-studies/ >Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). This commitment not only informs our content but shapes how we relate to one another in our processes of creation and collaboration.</p>
 <p>By elevating BIPOC, contingent, and other vulnerably-positioned scholars, we seek to build a community based on radical care, which works to remove the structural impediments that prevent scholars, students, and the humanities from receiving the kinds of support and sustenance they so desperately need. Ultimately, the project hopes to inspire new modes of teaching and model alternative forms of scholarly engagement that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
 </section>
 <hr class=section-divider>
-<section aria-labelledby=syllabi>
+<section aria-labelledby=coming-soon id=upcoming>
+<div class=image-wrapper>
+<img class=image-border loading=lazy src=images/uvc_0005-deriv-1640px.jpg srcset="images/uvc_0005-deriv-1640px.jpg 1640w, images/uvc_0005-deriv-1244px.jpg 1244w, images/uvc_0005-deriv-864px.jpg 864w, images/uvc_0005-deriv-622px.jpg 622w, images/uvc_0005-deriv-592px.jpg 592w, images/uvc_0005-deriv-432px.jpg 432w, images/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
+<div class=image-caption>
+<h3>
+<a href=#gee>
+William Gee, “Carving Scene,” c.1905
+</a>
+</h3>
+</div>
+</div>
+<h2 id=coming-soon>Coming Soon (late January / early February)</h2>
+<p>Carefully-curated teaching materials that center voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
+<ul>
+<li><span>Suggested primary resources and study materials</span>
+<ul>
+<li>For teaching Mary Seacole's <em>Wonderful Adventures of Mrs Seacole in Many Lands</em> in a variety of thematic and historical contexts, including pathways focused on:
+<ol>
+<li>Decentering Britishness;</li>
+<li>Decolonizing (Health)Care;</li>
+<li>Gender, Race, Nation;</li>
+<li>Recentering Nursing in Wartime.</li>
+</ol>
+</li>
+<li>For incorporating texts from and about nineteenth-century Africa through a variety of thematic and critical contexts, including units on:
+<ol>
+<li>Life writing;</li>
+<li>Colonial environments;</li>
+<li>Sex and sexuality;</li>
+<li>Ethiopianism;</li>
+<li>Resistance;</li>
+<li>Poetic representation and reinvention;</li>
+<li>Afterlives of slavery.</li>
+</ol>
+</li>
+</ul>
+</li>
+<li><span>Video podcast episodes</span>
+<ul>
+<li>On using visual materials, periodicals and book history to “undiscipline” Victorian literature in classroom settings;</li>
+<li>On incorporating new antiracist frameworks – theoretical, textual, generic, historical, multiracial – in the classroom.</li>
+</ul>
+</li>
+</ul>
+</section>
+<hr class=section-divider>
+<section aria-labelledby=syllabi id=call>
+<div class=image-wrapper>
+<img loading=lazy src=images/uvc_0006-deriv-1640px.jpg srcset="images/uvc_0006-deriv-1640px.jpg 1640w, images/uvc_0006-deriv-1244px.jpg 1244w, images/uvc_0006-deriv-864px.jpg 864w, images/uvc_0006-deriv-622px.jpg 622w, images/uvc_0006-deriv-592px.jpg 592w, images/uvc_0006-deriv-432px.jpg 432w, images/uvc_0006-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous, “Dance Blanket with Diving Whale and Raven Motifs” (Wool and bark, Northwest Coast of Alaska, United States, c.1880-c.1900 1880), 1961.568., Art Institute of Chicago, Chicago, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/).">
+<div class=image-caption>
+<h3>
+<a href=#dance>
+Anonymous Tlingit Artist, “Dance Blanket,” c.1880-c.1900
+</a>
+</h3>
+</div>
+</div>
 <h2 id=syllabi>Call for Syllabi (CFS)</h2>
-<p style=padding-top:.5em><strong>Deadline:</strong> Accepted on a rolling basis</p>
-<p><a href=https://undiscipliningvc.org/ >Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href=https://lareviewofbooks.org/article/undisciplining-victorian-studies/ >Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds and 2) introduce less-studied, global, Victorian-era authors into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
+<p style=padding-top:.5em;text-align:center><strong>Deadline:</strong> Accepted on a rolling basis</p>
+<p><a href=https://undiscipliningvc.org/ >Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href=https://lareviewofbooks.org/article/undisciplining-victorian-studies/ >Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds and 2) introduce less-studied, global, Victorian-era writers, artists and communities into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
 <p>Currently, we are in the process of building content that models antiracist teaching practices for Victorian studies and are seeking syllabi from instructors whose work in the classroom aligns with the mission of <em>Undisciplining the Victorian Classroom.</em> This content will be published on our website after a peer review process, to become part of our open-access resource. While these courses should feature a text or texts from the Victorian era, the syllabi do not need to be exclusively focused on 19th-century literature. Such syllabi can be original syllabi from courses already taught, revised versions of previously used syllabi, or syllabi that have been designed but not yet deployed in a course setting.</p>
 <p>For this Call for Syllabi (CFS), we request short abstracts (300 words maximum) that summarize syllabus content, provide a critical reflection on course design, and cite a small, representative selection of primary and/or secondary course materials. Abstracts will be reviewed by the organizers of <em>Undisciplining the Victorian Classroom</em>, and select instructors will be invited to submit full syllabi along with short, correlated summaries of pedagogical critical intervention. Full syllabi and summaries will undergo full peer review and, if successful, be published on our website.</p>
-<p>Submissions are accepted on a rolling basis. Syllabi abstracts can be submitted directly through this <a href=https://forms.gle/nTUMTr7E5hH5G3ZV6>Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars, contingent faculty, and those with backgrounds that are under-represented in Victorian Studies.</p>
+<p>Submissions are accepted on a rolling basis. Syllabi abstracts can be submitted directly through this <a href=https://forms.gle/nTUMTr7E5hH5G3ZV6>Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we especially welcome submissions from early-career scholars, contingent faculty, and those with backgrounds that are under-represented in Victorian Studies.</p>
 <p>Questions about this CFS and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to <a href=mailto:chaozonbauer@gmail.com>Pearl Chaozon Bauer</a>. To be placed on the project mailing list, kindly fill out this <a href=https://forms.gle/TN9M4Ugqy5cwKnoEA>Google mailing list form</a>.</p>
 </section>
 <hr class=section-divider>
-<section aria-labelledby=images class=smaller>
-<h3 id=images>Slideshow Images</h3>
-<p id=kalighat><em>Slide #1</em>: Anonymous Indian Artist. “<a href=https://clevelandart.org/art/2003.103>Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art, Cleveland. CC0 “No Rights Reserved.”</p>
+<section aria-labelledby=image-details class="smaller details">
+<h3 id=image-details>Image Details</h3>
+<h4>Slideshow</h4>
+<p id=kalighat><em>Slide #1</em>: Anonymous Indian Artist. “<a href=https://clevelandart.org/art/2003.103>Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art. CC0 “No Rights Reserved.”</p>
 <p id=markino><em>Slide #2</em>: Yoshio Markino. “Earl’s Court Station.” In <a href=https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up>A Japanese Artist in London</a>, by Yoshio Markino, 196. London: Chatto & Windus, 1910. Public domain image.</p>
 <p id=mcrae><em>Slide #3</em>: Tommy McRae. Untitled Illustration. In <a href=https://archive.org/details/cu31924029909060/page/n5/mode/2up>Australian Legendary Tales</a>, 114. Edited and translated by K. Langloh Parker. London; Melbourne: David Nutt; Melville, Mullen & Slade, 1896. Public domain image.</p>
 <p id=fante><em>Slide #4</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>.” Cloth, dye. Ghana, c.1910. Textile and Fiber Arts, 88-9-1. Smithsonian Institution. National Museum of African Art. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
+<h4>Coming Soon</h4>
+<p id=gee>Gee, William. “<a href=https://collections.tepapa.govt.nz/object/417717>Carving Scene</a>.” Tōtara wood. Wellington, New Zealand, c.1905. Te Papa (GH007416). Museum of New Zealand | Te Papa Tongarewa. Gift of Mrs G. M. Williams, 1965. <a href=https://creativecommons.org/licenses/by-nc-nd/4.0/ >CC BY-NC-ND 4.0</a>.</p>
+<h4>Call for Syllabi</h4>
+<p id=dance>Anonymous Tlingit Artist. “<a href=https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs>Dance Blanket with Diving Whale and Raven Motifs</a>.” Wool and bark. Northwest Coast of Alaska, United States, c.1880-c.1900. 1961.568. Art Institute of Chicago. Kate S. Buckingham Endowment. <a href=https://creativecommons.org/publicdomain/zero/1.0/ >CC0 1.0</a>.</p>
 </section>
-<br>
+<hr class=section-divider>
 <section aria-labelledby=site-code class=smaller>
-<h3 id=site-code>Site Code and Accessibility</h3>
-<p>The code for this site is adapted from the <a href=https://onemorevoice.org/ >One More Voice</a> project site, is released under a <a href=https://creativecommons.org/licenses/by-nc/4.0/ >Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities.</p>
+<h3 id=site-code>Site Code</h3>
+<p>The code for this site is adapted from the <a href=https://onemorevoice.org/ >One More Voice</a> project site, is released under a <a href=https://creativecommons.org/licenses/by-nc/4.0/ >Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities. The site’s minimalist aesthetic cuts down on visual clutter and supports a stress-free and navigationally-clear experience for all audiences.</p>
 </section>
 </main>
 <footer class=footer id=footer-div>
@@ -179,6 +247,7 @@ Anonymous Fante Artist, Asafo Flag, 1910
 				});
 			}
 </script>
+<script>var mybutton=document.getElementById("topButton");function scrollFunction(){20<document.body.scrollTop||20<document.documentElement.scrollTop?mybutton.style.display="block":mybutton.style.display="none"}function topFunction(){document.body.scrollTop=0,document.documentElement.scrollTop=0}window.onscroll=function(){scrollFunction()}</script>
 <script src=scripts/carousel.js></script>
 <script src=scripts/carouselItem.js></script>
 <script src=scripts/carouselButtons.js></script>
