--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel=icon type=image/png sizes=32x32 href=images/icons/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=images/icons/favicon-16x16.png>
 <link rel=manifest href=site.webmanifest>
-<link rel=stylesheet href=css/style.css>
+<link rel=stylesheet href=css/style-dev.css>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/jacksilver-webfont.woff2>
 <link rel=preload as=font type=font/woff crossorigin href=fonts/jacksilver-webfont.woff>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/sourcesanspro-regular-webfont.woff2>
@@ -124,7 +124,6 @@ Anonymous Fante Artist, Asafo Flag, 1910
 </ol>
 </nav>
 <hr class=section-divider>
-<button onclick=topFunction() ontouchend=topFunction() id=topButton aria-label="Scroll to top" title="Scroll to top">Top</button>
 <main class=main id=main>
 <section class=organizers aria-labelledby=organizers>
 <h2 id=organizers>Organizers</h2>
@@ -232,6 +231,7 @@ Anonymous Tlingit Artist, “Dance Blanket,” c.1880-c.1900
 <hr>
 <p>&#169; 2020, <a href=https://creativecommons.org/licenses/by/4.0/ >CC BY 4.0</a> | Hosted by <a href=https://github.com/undiscipliningvc>GitHub</a> | Design &amp; admin: <a href=mailto:awisnicki@yahoo.com>Adrian S. Wisnicki</a> | Contact: <a href=mailto:chaozonbauer@gmail.com>Pearl Chaozon Bauer</a></p>
 </footer>
+<button onclick=topFunction() ontouchend=topFunction() id=topButton aria-label="Scroll to top" title="Scroll to top" tabindex=0>Top</button>
 </article>
 <script>
 /* Service Worker */
