update index dev

--- a/index-dev.html
+++ b/index-dev.html
@@ -198,8 +198,6 @@
 			
 			<hr class="section-divider"/>
 
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top">Top</button>
-
 			<main class="main" id="main">
 				<section class="organizers" aria-labelledby="organizers">
 					<h2 id="organizers">Organizers</h2>
@@ -333,6 +331,8 @@
 				<hr />
 				<p>&#169; 2020, <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> | Hosted by <a href="https://github.com/undiscipliningvc">GitHub</a> | Design &amp; admin: <a href="mailto:awisnicki@yahoo.com">Adrian S. Wisnicki</a> | Contact: <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a></p>
 			</footer>
+
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</article>			
 		<script>
 			/* Service Worker */
