--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel=icon type=image/png sizes=32x32 href=images/icons/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=images/icons/favicon-16x16.png>
 <link rel=manifest href=site.webmanifest>
-<link rel=stylesheet href=css/style-dev.css>
+<link rel=stylesheet href=css/style.css>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/jacksilver-webfont.woff2>
 <link rel=preload as=font type=font/woff crossorigin href=fonts/jacksilver-webfont.woff>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/sourcesanspro-regular-webfont.woff2>
