--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Anonymous Tlingit Artist, “Dance Blanket,” c.1880-c.1900
 </main>
 <footer class=footer id=footer-div>
 <hr>
-<p>&#169; 2020, <a href=https://creativecommons.org/licenses/by/4.0/ >CC BY 4.0</a> | Hosted by <a href=https://github.com/undiscipliningvc>GitHub</a> | Design &amp; admin: <a href=mailto:awisnicki@yahoo.com>Adrian S. Wisnicki</a> | Contact: <a href=mailto:chaozonbauer@gmail.com>Pearl Chaozon Bauer</a></p>
+<p>&#169; 2020-2021, <a href=https://creativecommons.org/licenses/by/4.0/ >CC BY 4.0</a> | Hosted by <a href=https://github.com/undiscipliningvc>GitHub</a> | Design &amp; admin: <a href=mailto:awisnicki@yahoo.com>Adrian S. Wisnicki</a> | Contact: <a href=mailto:chaozonbauer@gmail.com>Pearl Chaozon Bauer</a></p>
 </footer>
 <button onclick=topFunction() ontouchend=topFunction() id=topButton aria-label="Scroll to top" title="Scroll to top" tabindex=0>Top</button>
 </article>
