--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=robots content="index, follow">
 <meta name=theme-color content=#1C4C87>
+<link rel=stylesheet href="css/style.css?random=@Environment.TickCount">
 <link rel=apple-touch-icon sizes=180x180 href=images/icons/apple-touch-icon-180x180.png>
 <link rel=icon type=image/png sizes=32x32 href=images/icons/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=images/icons/favicon-16x16.png>
 <link rel=manifest href=site.webmanifest>
-<link rel=stylesheet href="css/style-dev.css?random=@Environment.TickCount">
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/jacksilver-webfont.woff2>
 <link rel=preload as=font type=font/woff crossorigin href=fonts/jacksilver-webfont.woff>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/sourcesanspro-regular-webfont.woff2>
@@ -24,7 +24,7 @@
 <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-31768072-6")</script>
 </head>
 <body class=essay>
-<article>
+<div class="text-container">
 <nav id=skiptocontent aria-labelledby=nav0>
 <a href=#main id=nav0 tabindex=0>skip to main content</a>
 </nav>
@@ -229,7 +229,7 @@ Anonymous Tlingit Artist, “Dance Blanket,” c.1880-c.1900
 <p>&#169; 2020-2021, <a href=https://creativecommons.org/licenses/by/4.0/ >CC BY 4.0</a> | Hosted by <a href=https://github.com/undiscipliningvc>GitHub</a> | Design &amp; admin: <a href=mailto:awisnicki@yahoo.com>Adrian S. Wisnicki</a> | Contact: <a href=mailto:chaozonbauer@gmail.com>Pearl Chaozon Bauer</a></p>
 </footer>
 <button onclick=topFunction() ontouchend=topFunction() id=topButton aria-label="Scroll to top" title="Scroll to top" tabindex=0>Top</button>
-</article>
+</div>
 <script>
 /* Service Worker */
 			/* Taken from https://pwa-workshop.js.org/2-service-worker/#registering-the-service-worker */
