--- a/index-dev.html
+++ b/index-dev.html
@@ -9,8 +9,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#1C4C87"/>
-		<link rel="stylesheet" type="text/css" href="css/style-dev.css?random=@Environment.TickCount"/>	
-		<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png"/>
+		<link rel="stylesheet" type="text/css" href="css/style-dev.css?v999"/>	
+		<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png"/>
 		<link rel="manifest" href="site.webmanifest"/>
@@ -22,21 +22,7 @@
 		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/notoserif-regular-webfont.woff"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/notoserif-bold-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/notoserif-bold-webfont.woff"/>
-		<script>
-			(function()
-			{
-			  if( window.localStorage )
-			  {
-				if( !localStorage.getItem('firstLoad') )
-				{
-				  localStorage['firstLoad'] = true;
-				  window.location.reload();
-				}  
-				else
-				  localStorage.removeItem('firstLoad');
-			  }
-			})();
-		</script>
+		<script>(function(){if(window.localStorage){if(!localStorage.getItem('firstLoad')){localStorage['firstLoad']=true;window.location.reload()}else{localStorage.removeItem('firstLoad')}}})();</script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>  	
@@ -378,7 +364,6 @@
 			document.documentElement.scrollTop = 0;
 			}
 		</script>
-
 		<script src="scripts/carousel.js"></script>
 		<script src="scripts/carouselItem.js"></script>
 		<script src="scripts/carouselButtons.js"></script>
