--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=robots content="index, follow">
 <meta name=theme-color content=#1C4C87>
-<link rel=stylesheet href="css/style.css?random=@Environment.TickCount">
-<link rel=apple-touch-icon sizes=180x180 href=images/icons/apple-touch-icon-180x180.png>
+<link rel=stylesheet href="css/style.css?999">
+<link rel=apple-touch-icon sizes=180x180 href=images/icons/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=images/icons/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=images/icons/favicon-16x16.png>
 <link rel=manifest href=site.webmanifest>
@@ -20,6 +20,7 @@
 <link rel=preload as=font type=font/woff crossorigin href=fonts/notoserif-regular-webfont.woff>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/notoserif-bold-webfont.woff2>
 <link rel=preload as=font type=font/woff crossorigin href=fonts/notoserif-bold-webfont.woff>
+<script>(function(){if(window.localStorage){if(!localStorage.getItem('firstLoad')){localStorage['firstLoad']=true;window.location.reload()}else{localStorage.removeItem('firstLoad')}}})();</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-31768072-6")</script>
 </head>
